# node-filerix

./: .gitignore  .npmignore  CMakeLists.txt  Makefile  package-lock.json  package.json  tsconfig.json  vcpkg.json  vite.config.ts  wrapper.cc
.github/workflows/: Release-assets.yml  release.yml
include/: Bindings.hpp
include/Bindings/FileSystem/: CompressionBinding.hpp  DrivesBinding.hpp  FilesBinding.hpp  UserBinding.hpp
include/Bindings/Listeners/: DriveListenerBinding.hpp  FileListenerBinding.hpp
include/Utils/: FileUtils.hpp
scripts/: build.sh  install.sh  uninstall.sh
src/: index.ts
src/electron/: index.ts
src/lib/: index.ts
